# durable-mcp

./: .gitignore  README.md  activities.py  claude_desktop_config.json  hackernews.py  hackernews_worker.py  models.py  non-durable-weather.py  pf.rules  pyproject.toml  run_hackernews_worker.py  run_mcp_client.py  run_weather_worker.py  weather.py  weather_worker.py  worker.py  workflows.py
mcp_clients/: README.md  __init__.py  advanced_client.py  simple_client.py
mcp_servers/: __init__.py  hackernews.py  weather.py
shared/: __init__.py  models.py
workflows/: activities.py  agent_activities.py  agent_workflows.py  hackernews_activities.py  hackernews_worker.py  hackernews_workflows.py  pdf_generation_activity.py  scraping.py  weather_activities.py  weather_worker.py  weather_workflows.py  workflows.py
