[project]
name = "weather"
version = "0.1.0"
description = "A simple MCP weather server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "temporalio>=1.11.1",
    "fastmcp>=2.0.0",
    "litellm>=1.48.0",
    "python-dotenv>=1.0.1",
]

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
  "mcp_clients",
  "mcp_servers",
  "shared",
  "workflows",
]